--- a/locale/en.json
+++ b/locale/en.json
@@ -1,9 +1,6 @@
 {
   "translation": {
-    "WEEK_1": "Week 1",
-    "WEEK_2": "Week 2",
-    "WEEK_3": "Week 3",
-    "WEEK_4": "Week 4",
+    "or": "Office of Readings",
     "dt": "Daytime Prayer",
     "mp": "Morning Prayer",
     "ep": "Evening Prayer",
